<resources>
    <string name="app_name">My Application</string>
    <string name="action1">Reduce your heating and cooling</string>
    <string name="action2">Drive less</string>
    <string name="action3">Eat a plant-based meal</string>
    <string name="action4">Take the train instead of a plane</string>
    <string name="action5">Cut your food waste</string>
    <string name="action6">Try Zero-waste Fashion</string>
    <string name="action7">Buy Local</string>
    <string name="action8">Speak up</string>
    <string name="action9">Buy energy from renewable sources</string>
    <string name="action10">Switch to an electric vehicle</string>
    <string name="title_activity_action1">Action1Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_action2">Action2Activity</string>
    <string name="time">Time(in hrs)</string>
    <string name="name">Name</string>
    <string name="appl1">LED</string>
    <string name="t1">12</string>
    <string name="watts">Watts</string>
    <string name="w1">100</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myprofile">MyProfile</string>
    <string name="username">Samantha Nishanth</string>
    <string name="user_subtitle">My Wife</string>
    <string name="item1_text">Item1</string>
    <string name="item2_text">some text</string>
    <string name="item3_text">some text</string>
    <string name="item4_text">some text</string>
</resources>