<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="11dp"
    app:cardUseCompatPadding="true"
    android:backgroundTint="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="11dp">


        <TextView
            android:id="@+id/Name"
            android:layout_width="147dp"
            android:layout_height="36dp"
            android:text="@string/name"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintEnd_toStartOf="@id/Name1"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />

        <EditText
            android:id="@+id/textView"
            android:layout_width="147dp"
            android:layout_height="46dp"
            android:text="@string/appl1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView1"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Name"
            tools:layout_editor_absoluteY="56dp" />

        <TextView
            android:id="@+id/Name1"
            android:layout_width="107dp"
            android:layout_height="36dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/textView1"
            app:layout_constraintEnd_toStartOf="@id/Name2"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toEndOf="@id/Name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />

        <EditText
            android:id="@+id/textView1"
            android:layout_width="107dp"
            android:layout_height="46dp"
            android:text="@string/t1"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView2"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toEndOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@id/Name1"
            tools:layout_editor_absoluteY="56dp" />

        <TextView
            android:id="@+id/Name2"
            android:layout_width="107dp"
            android:layout_height="36dp"
            android:text="@string/watts"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toEndOf="@id/Name1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />

        <EditText
            android:id="@+id/textView2"
            android:layout_width="107dp"
            android:layout_height="46dp"
            android:text="@string/w1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toEndOf="@id/textView1"
            app:layout_constraintTop_toBottomOf="@id/Name2"
            tools:layout_editor_absoluteY="56dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

